--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">MyMovies</string>
+    <string name="app_name">The Movie DB</string>
     <string name="popular">Popular</string>
-    <string name="most_popular_movies">Most popular movies</string>
-    <string name="error_fetch_movies">Please check your internet connection</string>
-    <string name="top_rated">Top Rated</string>
-    <string name="highest_rated_movies">Highest rated movies of all time</string>
-    <string name="upcoming">Upcoming</string>
-    <string name="stay_updated">Stay updated with the latest movies</string>
+    <string name="most_popular_movies">Películas más populares.</string>
+    <string name="error_fetch_movies">Por favor revise su conexion a internet.</string>
+    <string name="top_rated">Los más valorados</string>
+    <string name="highest_rated_movies">Películas mejor calificadas de todos los tiempos</string>
+    <string name="upcoming">Próximas</string>
+    <string name="stay_updated">Manténgase actualizado con las últimas películas.</string>
 </resources>
